[gd_scene load_steps=13 format=3 uid="uid://cjv5u2x5n5ptf"]

[ext_resource type="Script" uid="uid://bgvolld461y5t" path="res://Screens/GameScreen/Tabs/Combat/Actors/combat_actor.gd" id="1_8w7gt"]
[ext_resource type="Script" uid="uid://chv44hxopmvat" path="res://Graphic Elements/ProgressBars/action_progress_bar.gd" id="2_7ro7t"]
[ext_resource type="Texture2D" uid="uid://dvlvooen3wj88" path="res://Images/PlaceholderCharacterGraphic.jpg" id="3_cbk5a"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u1t73"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ifx2h"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fx5t0"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jd46h"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u82ij"]
bg_color = Color(0.172833, 0.172833, 0.172833, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dtpto"]
bg_color = Color(1, 0.397701, 0.329255, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3a1s6"]
bg_color = Color(0.839216, 0.160784, 0.0627451, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dkg8q"]
bg_color = Color(0.229211, 0.614065, 0.871764, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wvxi0"]
bg_color = Color(0, 0.322341, 0.652705, 1)

[node name="CombatActor" type="Panel"]
clip_contents = true
custom_minimum_size = Vector2(250, 405)
offset_right = 200.0
offset_bottom = 323.6
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_u1t73")
script = ExtResource("1_8w7gt")

[node name="TitleCard" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.1
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_ifx2h")

[node name="Title" type="RichTextLabel" parent="TitleCard"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_colors/default_color = Color(0, 0, 0, 1)
text = "Placeholder Name"
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1
justification_flags = 161

[node name="Delimiter" type="Line2D" parent="TitleCard"]

[node name="ResourceCard" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.75
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_fx5t0")

[node name="ActionLabel" type="RichTextLabel" parent="ResourceCard"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.25
size_flags_horizontal = 3
mouse_filter = 1
theme_override_colors/default_color = Color(0, 0, 0, 1)
text = "Action Name"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="ResourceCard"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.025
anchor_top = 0.25
anchor_right = 0.975
anchor_bottom = 0.95

[node name="ActionProgressBar" type="ProgressBar" parent="ResourceCard/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1
theme_override_font_sizes/font_size = 13
theme_override_styles/background = SubResource("StyleBoxFlat_jd46h")
theme_override_styles/fill = SubResource("StyleBoxFlat_u82ij")
script = ExtResource("2_7ro7t")

[node name="HPBar" type="ProgressBar" parent="ResourceCard/VBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 13
theme_override_styles/background = SubResource("StyleBoxFlat_dtpto")
theme_override_styles/fill = SubResource("StyleBoxFlat_3a1s6")
value = 100.0

[node name="MPBar" type="ProgressBar" parent="ResourceCard/VBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 13
theme_override_styles/background = SubResource("StyleBoxFlat_dkg8q")
theme_override_styles/fill = SubResource("StyleBoxFlat_wvxi0")
value = 100.0

[node name="Graphic" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.1
anchor_right = 1.0
anchor_bottom = 0.75
offset_left = 2.0
offset_right = -2.0
texture = ExtResource("3_cbk5a")
expand_mode = 1

[connection signal="actionReady" from="ResourceCard/VBoxContainer/ActionProgressBar" to="." method="_on_action_progress_bar_action_ready"]
